# market-watch

./: .dockerignore  .gitignore  Dockerfile  README.md  market.service  nginx.conf  pyproject.toml  requirements.txt  run.sh
.devcontainer/: devcontainer.json
.github/workflows/: keepalive.yml
data/: hist.parquet.timestamp  info.json.gz.timestamp  multi-asset-correlation.csv  multi-asset-risk-return.csv  nasdaq-100.csv
data/ark-innovation/: 2025-10-13.csv  2025-10-14.csv  2025-10-15.csv  2025-10-16.csv  2025-10-17.csv  2025-10-19.csv  2025-10-20.csv  2025-11-10.csv  2025-11-11.csv  2025-11-12.csv  2025-11-13.csv  2025-11-14.csv  2025-11-15.csv  2025-11-16.csv  2025-11-18.csv  2025-11-19.csv  2025-11-20.csv  2025-11-21.csv  2025-11-22.csv  2025-11-23.csv  2025-11-28.csv  2025-11-29.csv  2025-11-30.csv  2025-12-01.csv  2025-12-02.csv  2025-12-03.csv  2025-12-04.csv  2025-12-05.csv  2025-12-06.csv  2025-12-07.csv  2025-12-08.csv  2025-12-09.csv  2025-12-10.csv  2025-12-11.csv  2025-12-12.csv  2025-12-13.csv  2025-12-14.csv  2025-12-15.csv  2025-12-16.csv  2025-12-17.csv  (+85 more)
data/nasdaq-100/: 2024-11-17.csv  2024-11-18.csv  2024-11-19.csv  2024-11-20.csv  2024-11-21.csv  2024-11-22.csv  2024-11-23.csv  2024-11-24.csv  2024-11-25.csv  2024-11-26.csv  2024-11-27.csv  2024-11-28.csv  2024-11-29.csv  2024-11-30.csv  2024-12-01.csv  2024-12-02.csv  2024-12-03.csv  2024-12-04.csv  2024-12-05.csv  2024-12-06.csv  2024-12-07.csv  2024-12-08.csv  2024-12-09.csv  2024-12-10.csv  2024-12-11.csv  2024-12-12.csv  2024-12-13.csv  2024-12-14.csv  2024-12-15.csv  2024-12-16.csv  2024-12-17.csv  2024-12-18.csv  2024-12-19.csv  2024-12-20.csv  2024-12-21.csv  2024-12-22.csv  2024-12-23.csv  2024-12-25.csv  2024-12-26.csv  2024-12-27.csv  (+241 more)
data/portfolios/virtualbacon/: 2024-12-08.csv
data/raw/: ark-innovation.csv  nasdaq-100.csv  spx-500.csv
data/spx-500/: 2024-11-18.csv  2024-11-19.csv  2024-11-20.csv  2024-11-21.csv  2024-11-22.csv  2024-11-23.csv  2024-11-24.csv  2024-11-25.csv  2024-11-26.csv  2024-11-27.csv  2024-11-28.csv  2024-11-29.csv  2024-11-30.csv  2024-12-01.csv  2024-12-02.csv  2024-12-03.csv  2024-12-04.csv  2024-12-05.csv  2024-12-06.csv  2024-12-07.csv  2024-12-08.csv  2024-12-09.csv  2024-12-10.csv  2024-12-11.csv  2024-12-12.csv  2024-12-13.csv  2024-12-14.csv  2024-12-15.csv  2024-12-16.csv  2024-12-17.csv  2024-12-18.csv  2024-12-19.csv  2024-12-20.csv  2024-12-21.csv  2024-12-22.csv  2024-12-23.csv  2024-12-24.csv  2024-12-25.csv  2024-12-26.csv  2024-12-27.csv  (+242 more)
data/strategies/bn-two-ma/: BTCUSDT-2ma-001-020.csv  BTCUSDT-2ma-021-040.csv  BTCUSDT-2ma-041-060.csv  BTCUSDT-2ma-061-080.csv
data/strategies/two-ma/: BTC-USD-2ma-001-010.csv  BTC-USD-2ma-011-040.csv  BTC-USD-2ma-081-100.csv  BTC-USD-2ma-101-120.csv  BTC-USD-2ma-121-140.csv  BTC-USD-2ma-141-160.csv  BTC-USD-2ma-161-180.csv  BTC-USD-2ma-201-220.csv  BTC-USD-2ma-221-240.csv  BTC-USD-2ma-241-250.csv
data/strategies/yf-two-ma/: BTC-USD-2ma-041-060.csv  BTC-USD-2ma-061-080.csv  BTC-USD-2ma-181-200.csv  stats.md
data/tickers/: A.json  AAL.json  AAPL.json  ABBV.json  ABNB.json  ABT.json  ACGL.json  ACN.json  ADBE.json  ADI.json  ADM.json  ADP.json  ADSK.json  AEE.json  AEP.json  AES.json  AFL.json  AIG.json  AIZ.json  AJG.json  AKAM.json  ALB.json  ALGN.json  ALK.json  ALL.json  ALLE.json  AMAT.json  AMCR.json  AMD.json  AME.json  AMGN.json  AMP.json  AMT.json  AMZN.json  ANET.json  ANSS.json  AON.json  AOS.json  APA.json  APD.json  (+464 more)
etl/: __main__.py  timing.py
etl/flows/: market-etl-flow.service  scratch.py  update_tickers.py
etl/prefect-server/: Dockerfile  nginx.conf  prefect.service  run.sh
etl/prefect-server/apache2/: prefect-http.conf  prefect-ssl.conf
etl/warp/: run.sh  test.sh  warp.service
prefect-flows/: update_tickers.py
scripts/: get-sp500.sh  load_coin_price.py  process_companies_csv.py  refind_strategy.py  refine_strategy.py  scrape_lists.py  trim-git-histroy.sh  update-tickers.sh
src/js_eval/: index.html
src/market_watch/: Market_Watch.py  binance.py  fin.py  index_table.py  open_ai.py  settings.py  strategy.py  telegram_bot.py  ticker_data.py  utils.py  yahoo_finance.py  youtube.py
src/market_watch/etl/: __main__.py  timing.py
src/market_watch/js_eval/: __init__.py
src/market_watch/pages/: 01_SPX_500.py  02_NASDAQ_100.py  03_ARK_Innovation.py  04_Multi_Asset.py  05_Crypto.py  06_Pi_Cycle_Top_Indicator.py  07_Bitcoin_Halving.py  08_Back_Testing.py  09_Narratives.py  10_Influencers.py  10_My_Watchlist.py  11_Influencers.py  11_Youtube_Alpha.py  12_Youtube_Alpha.py  13_Bitcoin_Prediction.py  13_Prediction.py  14_Prediction_torch.py  1_SNP_500.py  1_SPX_500.py  2_Crypto.py  2_NASDAQ_100.py  (+9 more)
st-keep-warm/: Dockerfile  main.py  pyproject.toml
tests/test_market_watch/: test_youtube.py
(+2 files in other folders)
