[project]
name = "market-watch"
version = "0.1.0"
description = "Watch the market"
authors = [
    { name = "Cliff Xuan", email = "cliff.xuan@gmail.com" }
]
dependencies = [
    "streamlit>=1.35.0",
    "yfinance>=0.2.31",
    "pandas>=2.0.3",
    "PyPortfolioOpt>=1.5.5",
    "matplotlib>=3.7.3",
    "plotly>=5.17.0",
    "streamlit-aggrid>=0.3.4.post3",
    "orjson>=3.9.10",
    "scipy>=1.10.1",
    "statsmodels>=0.14.1",
    "pydantic>=2.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.9.1",
    "watchdog>=3.0.0",
    "pygithub>=2.1.1",
    "ipdb>=0.13.13",
    "boto3>=1.34.113",
    "typer>=0.12.3",
    "awswrangler>=3.7.3",
]

[tool.rye.scripts]
app = "streamlit run src/market_watch/Market_Watch.py"
etl = "python src/market_watch/etl"

[tool.hatch.metadata]
allow-direct-references = true
