[project]
name = "market-watch"
version = "0.1.0"
description = "Watch the market"
authors = [{ name = "Cliff Xuan", email = "cliff.xuan@gmail.com" }]
dependencies = [
    "streamlit",
    "yfinance",
    "pandas",
    "PyPortfolioOpt",
    "matplotlib",
    "plotly",
    "streamlit-aggrid",
    "orjson",
    "scipy",
    "statsmodels",
    "pydantic",
    "youtube-transcript-api>=0.6.3",
    "openai>=1.55.3",
    "google-api-python-client>=2.154.0",
    "python-telegram-bot>=21.9",
    "loguru>=0.7.3",
    "sqlmodel>=0.0.16",
    "curl-cffi>=0.10.0",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "ta>=0.11.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
[dependency-groups]
dev = [
    "black",
    "watchdog",
    "pygithub",
    "ipdb",
    "boto3",
    "typer",
    "awswrangler",
    "jupyterlab",
    "ruff>=0.7.3",
    "prefect>=3.1.2",
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.workspace]
members = ["market-watch"]

[tool.ruff]
target-version = "py311"
src = ["src"]
line-length = 88

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "PL",
    "C",
    "RUF",
    "PYI",
    "YTT",
    "N",
    "ANN",
    "A",
    "PYI",
    "Q",
    "TD",
    "ICN",
]
ignore = ["ANN101", "ANN102", "ANN204", "TD003"]
ignore-init-module-imports = true
fixable = ["I", "F401"]

[tool.ruff.lint.per-file-ignores]
"*tests/*" = [
    "ANN001",
    "ANN201",
    "ANN401",
    "ANN202",
    "PLR0913",
    "PLR2004",
    "E501",
]
"*_test.py" = [
    "ANN001",
    "ANN201",
    "ANN401",
    "ANN202",
    "PLR0913",
    "PLR2004",
    "E501",
]
"conftest.py" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN401",
    "ANN202",
    "PLR0913",
    "PLR2004",
    "E501",
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src", "tests"]

[tool.pyright]
venvPath = "."
venv = ".venv"
